--- a/1 - Introduction à la Sécurité des Logiciels et des Applications/TP0-WINDOWS10/02.md
+++ b/1 - Introduction à la Sécurité des Logiciels et des Applications/TP0-WINDOWS10/02.md
@@ -2,6 +2,9 @@
 - https://cyberini.com/ressources-cours-hacking-ethique/MSW10.zip
 - Utilisez winrar pour décompresser le fichier : https://winrar.fr.softonic.com/
 - # mdp :lbdh
+- # mdp : Passw0rd!
+![image](https://github.com/hrhouma/securite-logiciels-applications/assets/10111526/5a078823-87e7-4a1d-8b57-88683cd1eec7)
+
 
 # Étape 1
 ![image](https://github.com/hrhouma/securite-logiciels-applications/assets/10111526/7d6f2e72-e17c-4928-97fe-766603dcf4aa)
