--- a/B6-Projet6-Metasploitable/00-lab6.md
+++ b/B6-Projet6-Metasploitable/00-lab6.md
@@ -1,4 +1,14 @@
+# Tbale des matières
+- Étape 1 - Installation de Metasploitable3 via VAGRANT
+- Étape 2 - Ajout des machines et configuration des cartes
+- Étape 3 - Pinger les machines entre elles
+- Étape 4 - Démarrer Metasploitable3
+---
+
 #  1 - Étape 1 - Installation de Metasploitable3 
+
+
+
 
 ## Étapes d'Installation de Metasploitable3 sous Windows avec PowerShell dans WINDOWS
 
