--- a/B6-Projet6-Metasploitable/00-lab6.md
+++ b/B6-Projet6-Metasploitable/00-lab6.md
@@ -42,6 +42,8 @@ choco install packer -y
 
 Téléchargez et installez la dernière version de Vagrant depuis le site officiel : [https://www.vagrantup.com/downloads](https://www.vagrantup.com/downloads).
 
+![image](https://github.com/hrhouma/securite-logiciels-applications/assets/10111526/0503325f-9df8-42f1-9012-9666d360930e)
+
 # Lien pour télécharger VAGRANT
 - https://medium.com/@cnivesh/how-to-set-up-vagrant-on-windows-3bc841ea4811
 - https://developer.hashicorp.com/vagrant/install?product_intent=vagrant
