--- a/B6-Projet6-Metasploitable/00-lab6.md
+++ b/B6-Projet6-Metasploitable/00-lab6.md
@@ -44,30 +44,25 @@ Téléchargez et installez la dernière version de Vagrant depuis le site offici
 
 ![image](https://github.com/hrhouma/securite-logiciels-applications/assets/10111526/0503325f-9df8-42f1-9012-9666d360930e)
 
-# Lien pour télécharger VAGRANT
+## Installez vagrant en utilisant le .msi ou .exe (next , next , next , ...)
+# IMPORTANT : REDÉMARREZ LA MACHINE APRÈS AVOIR INSTALLÉ VAGRANT
+
+## AUTRES RÉFÉRENCES UTILES pour installer VAGRANT
 - https://medium.com/@cnivesh/how-to-set-up-vagrant-on-windows-3bc841ea4811
 - https://developer.hashicorp.com/vagrant/install?product_intent=vagrant
+
 
 #### 3. Téléchargement et configuration de Metasploitable3 :
 
 ##### a. Clonez le repository Metasploitable3 depuis GitHub :
 
+## Créez un dossier vagrant dans Documents (sous Windows) par exemple
 ```powershell
 git clone https://github.com/rapid7/metasploitable3.git
 cd .\metasploitable3\
-```
-
-##### b. Téléchargez l'image Metasploitable3 pour VirtualBox :
-
-Cela peut impliquer de télécharger une image spécifique depuis un lien fourni dans le repository Metasploitable3.
-
-#### 4. Configuration de la machine virtuelle avec Vagrant :
-
-##### a. Ajoutez l'image téléchargée à Vagrant :
-
-```powershell
 vagrant box add jbarnett-r7/metasploitable3-win2k8
 ```
+![image](https://github.com/hrhouma/securite-logiciels-applications/assets/10111526/c04bcd6a-5b16-4077-8256-73068ef61c0e)
 
 ##### b. Initialisez et démarrez la machine virtuelle :
 
@@ -76,7 +71,10 @@ vagrant init jbarnett-r7/metasploitable3-win2k8
 vagrant up
 ```
 
-#### 5. Connexion à la machine virtuelle :
+![image](https://github.com/hrhouma/securite-logiciels-applications/assets/10111526/a3097e08-a0ff-4ee4-b6c5-11358819783e)
+
+
+#### 4. Connexion à la machine virtuelle :
 
 Utilisez les identifiants par défaut pour vous connecter à la machine virtuelle :
 
