--- a/B6-Projet6-Metasploitable/00-lab6.md
+++ b/B6-Projet6-Metasploitable/00-lab6.md
@@ -81,13 +81,10 @@ Utilisez les identifiants par défaut pour vous connecter à la machine virtuell
 - **Utilisateur :** vagrant
 - **Mot de passe :** vagrant
 
-#### 6. Machines Virtuelles Jetables Windows (facultatif) :
+#### 4. Arrêtez les deux machines crées pour configurer les cartes en host-only adapter :
 
-Pour les tests d'exploitation de clients Windows, vous pouvez obtenir des machines virtuelles jetables directement depuis le site de Microsoft. Ces machines virtuelles sont gratuites pour 90 jours et disponibles ici : [https://developer.microsoft.com/en-us/windows/downloads/virtual-machines/](https://developer.microsoft.com/en-us/windows/downloads/virtual-machines/).
+![image](https://github.com/hrhouma/securite-logiciels-applications/assets/10111526/425dfbcf-9c2c-45d9-bc35-08108a184216)
 
-### Conclusion :
-
-En suivant ces étapes, vous serez en mesure de configurer rapidement et facilement Metasploitable3 sous Windows à l'aide de PowerShell, Git, Packer, Vagrant et VirtualBox. Assurez-vous de suivre les instructions spécifiques dans le repository Metasploitable3 pour obtenir l'image nécessaire et configurer correctement votre environnement de test d'intrusion.
 
 # Résumé
 Voici les commandes essentielles pour installer Metasploitable3 sous Windows, présentées dans un format de script avec les commentaires pour chaque commande :
