--- a/B6-Projet6-Metasploitable/00-lab6.md
+++ b/B6-Projet6-Metasploitable/00-lab6.md
@@ -1,5 +1,6 @@
 # Tbale des matières
 - Étape 1 - Installation de Metasploitable3 via VAGRANT
+- Étape 2 - Configuration des cartes
 - Étape 2 - Ajout des machines (Ubuntu 2204, Kali- linux, Windows 10) et configuration des cartes
 - Étape 3 - Pinger les machines entre elles
 - Étape 4 - Démarrer Metasploitable3
