--- a/B6-Projet6-Metasploitable/00-lab6.md
+++ b/B6-Projet6-Metasploitable/00-lab6.md
@@ -1,9 +1,9 @@
 # Tbale des matières
 - Étape 1 - Installation de Metasploitable3 via VAGRANT
 - Étape 2 - Configuration des cartes
-- Étape 2 - Ajout des machines (Ubuntu 2204, Kali- linux, Windows 10) et configuration des cartes
-- Étape 3 - Pinger les machines entre elles
-- Étape 4 - Démarrer Metasploitable3
+- Étape 3 - Ajout des machines (Ubuntu 2204, Kali- linux, Windows 10) et configuration des cartes
+- Étape 4 - Pinger les machines entre elles
+- Étape 5 - Démarrer Metasploitable3
 ---
 
 #  1 - Étape 1 - Installation de Metasploitable3 
@@ -117,3 +117,49 @@ vagrant up
 # Utilisateur : vagrant
 # Mot de passe : vagrant
 ```
+
+
+
+#  2 - Étape 2 - Configuration des cartes
+
+- Vérifiez vos cartes host-only-adapter (parfois il faut fermer et réouvrir virtual box pour la mise à jour)
+![image](https://github.com/hrhouma/securite-logiciels-applications/assets/10111526/02945df1-dfdc-4b47-bf84-a72d5d8433f5)
+
+- Par exemple, vagrant a déscativé ma première carte et a crée une deuxième host-only adapter 2.
+- Je supprime la carte host-only-adapter 2 et je réactive la première en coachant enable server dans DHCP Server. Récupérez l'adresse ( Dans mon cas, 172.28.128.2)
+
+![image](https://github.com/hrhouma/securite-logiciels-applications/assets/10111526/0b8e03f8-b3e8-4417-a9fe-b1641bfa675c)
+![image](https://github.com/hrhouma/securite-logiciels-applications/assets/10111526/b7e3acab-6b9b-4353-bfb1-b1090b20fddc)
+
+
+- Dans la machine metasploitable ubuntu (on ignore la machine metasspoitable windows pour le moment ==­> la laisser éteinte) , nous choisissons le bridge adapter pour la première carte
+  ![image](https://github.com/hrhouma/securite-logiciels-applications/assets/10111526/ab068404-272e-4599-9cae-d048920314d8)
+
+- Pour la deuxième carte, nous choississons host-only adapter (le premier que nous avons gardé)
+
+![image](https://github.com/hrhouma/securite-logiciels-applications/assets/10111526/9b2e115b-b2ec-494a-ad9e-72287c4f737c)
+
+
+# Étape 3 - Ajout des machines (Ubuntu 2204) et configuration des cartes
+
+- Démarrez une machine Ubuntu2204
+- Créez un groupe spécifique pour vos deux machines par exemple Metasploitable3 et bougez les deux machines dans ce groupe
+![image](https://github.com/hrhouma/securite-logiciels-applications/assets/10111526/94e6720c-43cf-442b-8e12-396b06779a1e)
+- Configurez la machien ubuntu2204 : deux cartes
+- Première carte : Bridge
+- Deuxième carte : Host-Only-Adpater (même réseaux que Metasploitable)
+
+  ![image](https://github.com/hrhouma/securite-logiciels-applications/assets/10111526/9059865a-ad62-4461-957c-dd02e4aa98d3)
+  ![image](https://github.com/hrhouma/securite-logiciels-applications/assets/10111526/d26d1942-6d7b-4a62-b6e4-f82310cc2382)
+
+  - Démarrez votre machine UbuntuDesktop2204 et remarquez qu'il n'y a pas d'adresses IP associé à la deuxième carte ????
+  - Bon, dans mon cas, je suis chanceux et j'ai trouvé cette adresse 172.28.128.3
+![image](https://github.com/hrhouma/securite-logiciels-applications/assets/10111526/731873c3-0565-467c-a638-e861347dad25)
+![image](https://github.com/hrhouma/securite-logiciels-applications/assets/10111526/470d2055-0190-41d0-ab90-bcb69c65489c)
+
+# Supposons que nous n'avons pas d'adresses associé à la deuxième carte enp0s8 ?
+- Dans ce cas , appliquez ces manipulations !
+
+
+
+
