--- a/B6-Projet6-Metasploitable/00-lab6.md
+++ b/B6-Projet6-Metasploitable/00-lab6.md
@@ -163,3 +163,75 @@ vagrant up
 
 
 
+
+
+
+# ANNEXE 1 - Configuration de l'Interface enp0s8
+- README pour configurer l'interface réseau `enp0s8` (deuxième interface Host-Only) sur Kali Linux ou Ubuntu2204 afin de communiquer avec Metasploitable sur un réseau Host-Only :
+
+# Configuration de l'Interface enp0s8 sur Kali Linux
+
+Ce guide explique comment configurer l'interface réseau `enp0s8` (deuxième interface Host-Only) pour permettre la communication entre Kali Linux ou Ubuntu2204et Metasploitable sur un réseau Host-Only.
+
+## Configurer une Adresse IP Statique pour enp0s8
+
+1. **Ouvrir un Terminal sur Kali Linux**.
+
+2. **Configurer l'adresse IP statique** pour `enp0s8`. Supposons que vous souhaitiez utiliser l'adresse `172.28.128.2` avec un masque de sous-réseau de `255.255.255.0` :
+
+    ```bash
+    sudo ip addr add 172.28.128.2/24 dev enp0s8
+    sudo ip link set enp0s8 up
+    ```
+
+3. **Vérifier la configuration** :
+
+    ```bash
+    ip a show enp0s8
+    ```
+
+## Configurer le Routage (si nécessaire)
+
+Pour une communication simple entre Metasploitable et Kali sur le réseau Host-Only, la configuration des routes supplémentaires ne devrait pas être nécessaire.
+
+## Tester la Connectivité
+
+Testez la connectivité avec l'adresse IP de Metasploitable (supposons que c'est `172.28.128.1`):
+
+```bash
+ping 172.28.128.1
+```
+
+Si vous obtenez une réponse, cela signifie que la configuration est correcte et que les deux machines peuvent communiquer l'une avec l'autre.
+
+## Rendre la Configuration Persistante
+
+Pour que cette configuration soit persistante à travers les redémarrages, éditez le fichier de configuration réseau. Voici comment faire pour les distributions utilisant `systemd-networkd` et pour celles utilisant encore les fichiers traditionnels `/etc/network/interfaces`.
+
+### Pour systemd-networkd
+
+Créez un fichier de configuration dans `/etc/systemd/network/`:
+
+```bash
+[Match]
+Name=enp0s8
+
+[Network]
+Address=172.28.128.2/24
+Gateway=172.28.128.1
+```
+
+### Pour les fichiers traditionnels `/etc/network/interfaces`
+
+Ajoutez la configuration suivante :
+
+```bash
+auto enp0s8
+iface enp0s8 inet static
+    address 172.28.128.2
+    netmask 255.255.255.0
+    network 172.28.128.0
+    broadcast 172.28.128.255
+```
+
+Assurez-vous d'adapter ces instructions à votre gestionnaire de réseau spécifique et redémarrez le service réseau ou la machine pour tester les changements.
