--- a/B6-Projet6-Metasploitable/00-lab6.md
+++ b/B6-Projet6-Metasploitable/00-lab6.md
@@ -158,7 +158,8 @@ vagrant up
 ![image](https://github.com/hrhouma/securite-logiciels-applications/assets/10111526/470d2055-0190-41d0-ab90-bcb69c65489c)
 
 # Supposons que nous n'avons pas d'adresses associé à la deuxième carte enp0s8 ?
-- Dans ce cas , appliquez ces manipulations !
+- Dans ce cas , appliquez ces manipulations dans
+# ==> Annexe 1 -Configuration de l'Interface enp0s8
 
 
 
@@ -180,7 +181,7 @@ Ce guide explique comment configurer l'interface réseau `enp0s8` (deuxième int
 2. **Configurer l'adresse IP statique** pour `enp0s8`. Supposons que vous souhaitiez utiliser l'adresse `172.28.128.2` avec un masque de sous-réseau de `255.255.255.0` :
 
     ```bash
-    sudo ip addr add 172.28.128.2/24 dev enp0s8
+    sudo ip addr add 172.28.128.3/24 dev enp0s8
     sudo ip link set enp0s8 up
     ```
 
