--- a/B6-Projet6-Metasploitable/00-lab6.md
+++ b/B6-Projet6-Metasploitable/00-lab6.md
@@ -161,6 +161,19 @@ vagrant up
 - Dans ce cas , appliquez ces manipulations dans
 # ==> Annexe 1 -Configuration de l'Interface enp0s8
 
+- Démarrez les deux machines et observez les adresses avec ip a
+- Je donnerais pour éviter toute confusion l'adresse suivante à la machine Ubuntu2202 (172.28.128.5) ==> Annexe 1
+    ```bash
+    sudo ip a show enp0s8
+    sudo ip link set enp0s8 down
+    sudo ip addr add 172.28.128.5/24 dev enp0s8
+    sudo ip link set enp0s8 up
+    sudo ip a show enp0s8
+    ```
+
+
+- Pour la machine metasploitable3 (vagrant/vagrant), on peut avoir que l'adresse est 172.28.128.3 du réseaux Host Only adapter
+![image](https://github.com/hrhouma/securite-logiciels-applications/assets/10111526/2b03e446-7bcc-436f-a56c-0dc6e8421910)
 
 
 
@@ -181,7 +194,7 @@ Ce guide explique comment configurer l'interface réseau `enp0s8` (deuxième int
 2. **Configurer l'adresse IP statique** pour `enp0s8`. Supposons que vous souhaitiez utiliser l'adresse `172.28.128.2` avec un masque de sous-réseau de `255.255.255.0` :
 
     ```bash
-    sudo ip addr add 172.28.128.3/24 dev enp0s8
+    sudo ip addr add 172.28.128.5/24 dev enp0s8
     sudo ip link set enp0s8 up
     ```
 
