--- a/B6-Projet6-Metasploitable/00-lab6.md
+++ b/B6-Projet6-Metasploitable/00-lab6.md
@@ -176,6 +176,12 @@ vagrant up
 ![image](https://github.com/hrhouma/securite-logiciels-applications/assets/10111526/2b03e446-7bcc-436f-a56c-0dc6e8421910)
 
 
+# Résumons : Réseaux Host-only
+- Adaptateur : 172.28.128.1/24
+- DHCP server : 172.28.128.2/24
+- Ensembles d'adresses permises de 172.28.128.3 => 172.28.128.244
+- Machine metasploitable3 : 172.28.128.3/24
+- Machine Ubuntu2204 : 172.28.128.5/24
 
 
 
