--- a/B6-Projet6-Metasploitable/00-lab6.md
+++ b/B6-Projet6-Metasploitable/00-lab6.md
@@ -171,20 +171,26 @@ vagrant up
     sudo ip a show enp0s8
     ```
 
-
 - Pour la machine metasploitable3 (vagrant/vagrant), on peut avoir que l'adresse est 172.28.128.3 du réseaux Host Only adapter
 ![image](https://github.com/hrhouma/securite-logiciels-applications/assets/10111526/2b03e446-7bcc-436f-a56c-0dc6e8421910)
 
-
+---
 # Résumons : Réseaux Host-only
 - Adaptateur : 172.28.128.1/24
 - DHCP server : 172.28.128.2/24
 - Ensembles d'adresses permises de 172.28.128.3 => 172.28.128.244
 - Machine metasploitable3 : 172.28.128.3/24
 - Machine Ubuntu2204 : 172.28.128.5/24
+---
 
+# Étape 5 - Démarrer Metasploitable3 sur Ubuntu2204
+    ```bash
+    msfconsole
+    snap install metasploit-framework
+    msfconsole
+    ```
 
-
+---
 
 # ANNEXE 1 - Configuration de l'Interface enp0s8
 - README pour configurer l'interface réseau `enp0s8` (deuxième interface Host-Only) sur Kali Linux ou Ubuntu2204 afin de communiquer avec Metasploitable sur un réseau Host-Only :
