--- a/B6-Projet6-Metasploitable/00-lab6.md
+++ b/B6-Projet6-Metasploitable/00-lab6.md
@@ -1,13 +1,53 @@
 # Tbale des matières
+- Étape 0 - Différence entre `msfconsole` et `Metasploitable3` 
 - Étape 1 - Installation de Metasploitable3 via VAGRANT
 - Étape 2 - Configuration des cartes
 - Étape 3 - Ajout des machines (Ubuntu 2204, Kali- linux, Windows 10) et configuration des cartes
 - Étape 4 - Pinger les machines entre elles
 - Étape 5 - Démarrer Metasploitable3
 ---
+# 0 - Étape 0 - Différence entre `msfconsole` et `Metasploitable3` 
+
+`msfconsole` et `Metasploitable3` sont deux composants très différents utilisés dans le domaine de la cybersécurité, chacun ayant un rôle spécifique. Voici une explication détaillée de chacun :
+
+### msfconsole
+- **Qu'est-ce que c'est ?** `msfconsole` est l'interface en ligne de commande du **Metasploit Framework**, un outil puissant utilisé pour le développement et l'exécution d'exploits contre des cibles distantes.
+- **Rôle :** `msfconsole` sert de plateforme pour lancer des scans, des exploits, et d'autres outils de sécurité. C'est un environnement interactif qui permet aux utilisateurs de rechercher, de configurer et d'exécuter des modules d'exploitation et des payloads sur des cibles spécifiées.
+- **Utilisation :** Utilisé par les chercheurs en sécurité, les testeurs de pénétration et les professionnels de la cybersécurité pour identifier et exploiter les vulnérabilités dans les systèmes et les réseaux.
+
+### Metasploitable3
+- **Qu'est-ce que c'est ?** `Metasploitable3` est une machine virtuelle intentionnellement vulnérable, développée pour fournir un environnement d'entraînement sûr pour ceux qui apprennent la sécurité informatique et le test de pénétration.
+- **Rôle :** `Metasploitable3` agit comme une cible d'entraînement, permettant aux utilisateurs de tester leurs compétences en sécurité informatique dans un environnement contrôlé. Elle est remplie de vulnérabilités configurées pour être exploitées, aidant ainsi à pratiquer diverses techniques de piratage éthique.
+- **Utilisation :** Employée dans les milieux éducatifs et de formation pour pratiquer l'exploitation des failles de sécurité, la reconnaissance réseau, et plus encore.
+
+### Différences Clés
+- **Nature :** `msfconsole` est un outil ou une interface pour mener des attaques, tandis que `Metasploitable3` est une plateforme cible conçue pour être attaquée et testée.
+- **Objectif :** `msfconsole` est utilisé pour attaquer ou tester la sécurité de systèmes, tandis que `Metasploitable3` est utilisé pour être attaqué dans un contexte d'apprentissage.
+- **Interaction :** Dans un scénario typique d'entraînement en cybersécurité, `msfconsole` serait utilisé par l'attaquant pour exploiter les vulnérabilités présentes dans `Metasploitable3`.
+
+En résumé, `msfconsole` est le moyen par lequel les attaques sont lancées et gérées, et `Metasploitable3` est l'environnement qui reçoit ces attaques, permettant l'apprentissage et l'amélioration des compétences en sécurité des systèmes d'information.
+
+
+# Est-ce que  `msfconsole` ou `Metasploitable3` pointe sur une base de données ?
+
+### msfconsole et la Base de Données
+
+`msfconsole`, en tant que partie du Metasploit Framework, utilise effectivement une base de données pour plusieurs de ses fonctionnalités :
+- **Stockage des Résultats** : Metasploit utilise une base de données PostgreSQL pour stocker les informations sur les sessions, les hôtes, les services découverts pendant les scans, et les résultats des divers exploits. Cela permet de conserver un historique des activités, de générer des rapports, et d'analyser les données collectées lors de différentes campagnes de test.
+- **Optimisation des Performances** : L'utilisation d'une base de données améliore les performances en permettant à Metasploit de retrouver rapidement des informations sur des cibles précédemment analysées ou exploitées.
+- **Intégration des Modules** : Certains modules de Metasploit, particulièrement ceux qui gèrent de grandes quantités de données, tirent avantage de la base de données pour stocker et gérer ces informations de manière efficace.
+
+### Metasploitable3 et la Base de Données
+
+`Metasploitable3`, d'un autre côté, peut inclure des services de base de données vulnérables pré-installés que les utilisateurs peuvent tenter d'exploiter. Ces bases de données sont des composants ciblés dans l'environnement d'apprentissage, par exemple :
+- **Services SQL Vulnérables** : Metasploitable3 peut être équipé de versions vulnérables de MySQL, PostgreSQL, ou d'autres systèmes de gestion de base de données que les testeurs peuvent apprendre à exploiter (par exemple, injection SQL).
+- **Données Exemplaires** : Ces bases de données peuvent contenir des données fictives pour simuler un environnement de production, permettant aux apprenants de pratiquer des techniques de piratage éthique telles que l'exfiltration de données.
+
+### Conclusion
+
+Alors que `msfconsole` utilise une base de données pour gérer efficacement les données liées à ses opérations de sécurité, `Metasploitable3` peut inclure des bases de données comme cibles d'exploitation pour l'éducation et la formation en cybersécurité. Dans les deux cas, la manipulation et l'interaction avec des bases de données sont centrales mais servent des objectifs différents dans le contexte de la cybersécurité.
 
 #  1 - Étape 1 - Installation de Metasploitable3 
-
 
 
 
